# spectate

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/hardcoded_webhook/: run.sh
demo/vanished_auth/: run.sh  spec.yaml  views_clean.py
docs/: taxonomy.md
docs/decisions/: 0000-template.md  0001-effect-taxonomy-v1.md  0002-spec-schema-v1.md  0003-project-skeleton-and-tooling.md  0004-claude-code-skills-as-llm-api.md  0005-spec-init-flow-decisions.md  0006-spec-update-flow-decisions.md  0007-ast-only-watcher-detection.md  0008-observation-metadata-vs-tags.md  0009-spec-matchers-contract.md  README.md
docs/integrations/: claude-code-hook.md
examples/specs/: comprehensive.yaml  minimal.yaml  per_handler.yaml
src/spectate/: cli.py
src/spectate/bulletin/: __init__.py  _common.py  json_format.py  markdown.py  terminal.py
src/spectate/critique/: __init__.py  diff.py  expected.py
src/spectate/hooks/: claude_code.py
src/spectate/observations/: __init__.py  aggregate.py  observation.py  watcher.py
src/spectate/skills/spec-from-plan/: SKILL.md
src/spectate/skills/spec-init/: SKILL.md
src/spectate/skills/spec-update/: SKILL.md
src/spectate/spec/: __init__.py  accept.py  llm.py  models.py  serialize.py  spec.schema.json  transcribe.py  update.py  validate.py
src/spectate/watchers/: __init__.py  env.py  fs.py  imports_.py  network.py  sql.py  subprocess_.py
tests/: conftest.py  test_cli.py
tests/bulletin/: conftest.py  test_json.py  test_markdown.py  test_terminal.py
tests/critique/: test_diff.py  test_expected.py  test_inline_ignore.py
tests/e2e/: test_demos.py
tests/fixtures/hardcoded_webhook/: clean.py  violating.py
tests/fixtures/library_swap/: spec.yaml  violating.py
tests/fixtures/new_outbound/: clean.py  spec.yaml  violating.py
tests/fixtures/persistent_state/: clean.py  spec.yaml  violating.py
tests/fixtures/stale_spec/: spec.yaml  violating.py
tests/fixtures/subprocess/: spec.yaml  violating.py
tests/fixtures/typosquat/: clean.py  spec.yaml  violating.py
tests/fixtures/vanished_auth/: spec.yaml  violating.py
tests/hooks/: test_claude_code.py
tests/observations/: test_aggregate.py  test_observation.py  test_watcher.py
tests/spec/: test_accept.py  test_llm.py  test_schema.py  test_serialize.py  test_transcribe.py  test_update.py  test_validate.py
tests/watchers/: test_env.py  test_fs.py  test_imports.py  test_network.py  test_sql.py  test_subprocess.py
(+14 files in other folders)
