[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectate"
version = "0.0.1"
description = "A drift detector for AI-generated code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Neta", email = "netarvd@gmail.com" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "sqlglot>=25",
    "pathspec>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "types-jsonschema>=4.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
spectate = "spectate.cli:app"
spectate-cc-hook = "spectate.hooks.claude_code:main"

[project.urls]
Homepage = "https://github.com/netaarvd/spectate"

[tool.hatch.build.targets.wheel]
packages = ["src/spectate"]

[tool.hatch.build.targets.wheel.force-include]
"src/spectate/skills" = "spectate/skills"

[tool.hatch.build.targets.sdist]
include = ["src/spectate", "tests", "examples", "docs", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]
"src/spectate/cli.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
markers = [
    "e2e: end-to-end demo fixture tests that spawn the spectate CLI as a subprocess",
]
